--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-minimal
+title: Добро пожаловать на домашнюю страницу Александра Дворака
+description: Здесь вы узнаете кое-что обо мне, надеюсь Вам будет интересно. Или полезно :-) 
